samples/_failures_safe/1761271863_19ccae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca1710f4.c: In function ‘main’:
./samples/SAFE/__tmp_ca1710f4.c:171:12: error: missing terminating " character
  171 |     printf("Decompressed size: %zu
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ca1710f4.c:171:5: error: expected expression at end of input
  171 |     printf("Decompressed size: %zu
      |     ^~~~~~
./samples/SAFE/__tmp_ca1710f4.c:171:5: error: expected declaration or statement at end of input
